CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
#STRING(REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_LIST_DIR})
#PROJECT(${CURRENT_FOLDER} VERSION 1.0.0)
PROJECT(test)

SET(PROJECT_DIR ${CMAKE_CURRENT_LIST_DIR})
SET(SOLUTION_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
SET(OUT_DIR ${PROJECT_DIR}/bin/${CMAKE_BUILD_TYPE})

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(EXECUTABLE_OUTPUT_PATH ${OUT_DIR})
#SET(LIBRARY_OUTPUT_PATH ${OUT_DIR})

INCLUDE_DIRECTORIES(/root/workspace/boost_1_71_0)
INCLUDE_DIRECTORIES(${SOLUTION_DIR})
INCLUDE_DIRECTORIES(${SOLUTION_DIR}/submodule/oneTBB/include)

LINK_DIRECTORIES(/root/workspace/boost_1_71_0/stage/lib)
LINK_DIRECTORIES(${SOLUTION_DIR}/submodule/oneTBB/libs/static_release)
LINK_DIRECTORIES(${SOLUTION_DIR}/submodule/libgo/libs)

AUX_SOURCE_DIRECTORY(${PROJECT_DIR}/src src_files)
#AUX_SOURCE_DIRECTORY(${PROJECT_DIR}/other other_files)
#LIST(APPEND src_files ${other_files})

#ADD_LIBRARY(${PROJECT_NAME} SHARED ${src_files})
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

#ADD_EXECUTABLE(${PROJECT_NAME} ${src_files})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl pthread liblibgo.a libtbb.a)

FOREACH(var ${src_files})
    STRING(REGEX REPLACE ".*/" "" tmp ${var})
    STRING(REGEX REPLACE ".cpp" "" tgt ${tmp})
    ADD_EXECUTABLE(${tgt} ${var})
    TARGET_LINK_LIBRARIES(${tgt} dl pthread liblibgo.a libtbb.a)
ENDFOREACH(var)

# FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/Output/${CMAKR_BUILD_TYPE})
# ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cp
#         ${SOLUTION_DIR}/etc/config.toml ${SOLUTION_DIR}/etc/start.sh
#         ${OUT_DIR}/
# )
